...

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="513dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/search_bar_background"
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="513dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/search_bar_background"
...
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="515dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/search_bar_background"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
...
