<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_browse"
        android:icon="@drawable/baseline_browse_24"
        android:title="Browse"
        />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/baseline_library_music_24"
        android:title="Library" />

    <item
        android:id="@+id/navigation_leader_board"
        android:title="Leaderboard"
        android:icon="@drawable/outline_leaderboard_24" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_settings_24"
...
