<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/player_music_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="472dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="492dp"
        android:layout_marginBottom="91dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_playlist_name"
        tools:srcCompat="@drawable/baseline_library_music_24" />

    <TextView
        android:id="@+id/player_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="337dp"
        android:layout_marginEnd="888dp"
        android:layout_marginBottom="13dp"
        android:text="Artist"
        android:textColor="?android:textColorPrimary"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_name" />

    <TextView
        android:id="@+id/player_name"
        android:layout_width="550dp"
        android:layout_height="25dp"
        android:layout_marginStart="337dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="823dp"
        android:layout_marginBottom="8dp"
        android:text="Song Name"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/player_artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="504dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="525dp"
        android:layout_marginBottom="4dp"
        android:text="PLAYING FROM PLAYLIST"
        android:textColor="?android:textColorPrimary"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/player_playlist_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_playlist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="612dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="616dp"
        android:text="Rock"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/player_music_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/play_pause_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="585dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="591dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:srcCompat="@drawable/baseline_play_circle_outline_24" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="609dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="316dp"
        app:layout_constraintBottom_toTopOf="@+id/play_pause_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_artist" />


    <ImageView
        android:id="@+id/player_back_button"
        android:layout_width="65dp"
        android:layout_height="51dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:rotation="-90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/player_next"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/play_pause_button"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:srcCompat="@drawable/baseline_skip_next_24" />

    <ImageView
        android:id="@+id/player_prev"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        app:layout_constraintEnd_toStartOf="@+id/play_pause_button"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:srcCompat="@drawable/baseline_skip_previous_24" />

</androidx.constraintlayout.widget.ConstraintLayout>